✨ some auto improves